@@ -1,48 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio Version 16
-VisualStudioVersion = 16.0.29519.181
-MinimumVisualStudioVersion = 10.0.40219.1
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "KGySoft.Drawing", "KGySoft.Drawing\KGySoft.Drawing.csproj", "{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "KGySoft.Drawing.UnitTest", "KGySoft.Drawing.UnitTest\KGySoft.Drawing.UnitTest.csproj", "{7E74E3BC-2D32-458D-AF8F-E4171536A611}"
-EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{A0FE0FF5-C320-44F4-AA26-B0600C69CD38}"
-	ProjectSection(SolutionItems) = preProject
-		KGySoft.snk = KGySoft.snk
-		LICENSE = LICENSE
-		README.md = README.md
-	EndProjectSection
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		unix-Debug|Any CPU = unix-Debug|Any CPU
-		unix-Release|Any CPU = unix-Release|Any CPU
-		win-Debug|Any CPU = win-Debug|Any CPU
-		win-Release|Any CPU = win-Release|Any CPU
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.unix-Debug|Any CPU.ActiveCfg = unix-Debug|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.unix-Debug|Any CPU.Build.0 = unix-Debug|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.unix-Release|Any CPU.ActiveCfg = unix-Release|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.unix-Release|Any CPU.Build.0 = unix-Release|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.win-Debug|Any CPU.ActiveCfg = win-Debug|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.win-Debug|Any CPU.Build.0 = win-Debug|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.win-Release|Any CPU.ActiveCfg = win-Release|Any CPU
-		{06AEC656-8AE3-409C-AB2E-64C6A3712F8B}.win-Release|Any CPU.Build.0 = win-Release|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.unix-Debug|Any CPU.ActiveCfg = unix-Debug|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.unix-Debug|Any CPU.Build.0 = unix-Debug|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.unix-Release|Any CPU.ActiveCfg = unix-Release|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.unix-Release|Any CPU.Build.0 = unix-Release|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.win-Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.win-Debug|Any CPU.Build.0 = Debug|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.win-Release|Any CPU.ActiveCfg = Release|Any CPU
-		{7E74E3BC-2D32-458D-AF8F-E4171536A611}.win-Release|Any CPU.Build.0 = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-	GlobalSection(ExtensibilityGlobals) = postSolution
-		SolutionGuid = {0FAD51C6-1E18-4C33-A1E4-1E9C7DDB9570}
-	EndGlobalSection
-EndGlobal
